<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_xl"
        android:paddingRight="@dimen/padding_xl">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_rank_leaderboard_list_item"
            android:layout_width="@dimen/dimen_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_rank_title_leaderboard"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_body" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_name_leaderboard_list_item"
            android:layout_width="@dimen/dimen_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_name_title_leaderboard"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_body" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_mid_leaderboard_list_item"
            android:layout_width="@dimen/dimen_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_body" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_city_leaderboard_list_item"
            android:layout_width="@dimen/dimen_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_city_title_leaderboard"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_body" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_xp_leaderboard_list_item"
            android:layout_width="@dimen/dimen_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/text_xp_title_leaderboard"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_body" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>